[update] add comments

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A sample project for contract deployment and transaction activation using web3.js",
   "main": "index.js",
   "scripts": {
+    "compile": "node src/script/compile.js",
     "activate": "node src/script/interact.js"
   },
   "keywords": [
